tests/baselines/reference/nodeModulesAllowJsPackagePatternExports(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/allowJs/index.cjs(3,23): error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/allowJs/node_modules/inner/index.d.cts(3,22): error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/allowJs/node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.
tests/cases/conformance/node/allowJs/node_modules/inner/index.d.ts(3,22): error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/allowJs/index.js (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== tests/cases/conformance/node/allowJs/index.mjs (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== tests/cases/conformance/node/allowJs/index.cjs (1 errors) ====
    // cjs format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
                          ~~~~~~~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== tests/cases/conformance/node/allowJs/node_modules/inner/index.d.ts (2 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs/index";
                         ~~~~~~~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/allowJs/node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/allowJs/node_modules/inner/index.d.cts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
                         ~~~~~~~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/allowJs/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
    }
==== tests/cases/conformance/node/allowJs/node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs/*": "./*.cjs",
            "./mjs/*": "./*.mjs",
            "./js/*": "./*.js"
        }
    }